--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,9 +1,17 @@
-# config/packages/doctrine.yaml
-
 doctrine:
   dbal:
-    url: '%env(resolve:DATABASE_URL)%'
-    # Si necesitas configuraciones específicas de SQLite, puedes definirlas aquí
     driver: 'pdo_sqlite'
-    server_version: '3.39'
+    server_version: '3.15'
     charset: utf8
+    url: '%env(resolve:DATABASE_URL)%'
+  orm:
+    auto_generate_proxy_classes: true
+    naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+    auto_mapping: true
+    mappings:
+      App:
+        is_bundle: false
+        type: annotation
+        dir: '%kernel.project_dir%/src/Entity'
+        prefix: 'App\Entity'
+        alias: App
